--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Famous people</title>
+    <!--    odkaz na Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <!--     odkaz na ikony Bootstrapu -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
 </head>
 <body>
@@ -13,15 +15,20 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
             <a class="navbar-brand" href="/"><i class="bi-person-lines-fill" role="img"></i> Famous people</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <!--                Formulář na vyhledávání -->
+                <!--                Používá metodu get, protože jen zobrazuje data, nic nemění -->
+                <form class="d-flex" method="get" th:action="@{/}">
+                    <!--                    Vkládám dotaz do pole pomocí atributu value -->
+                    <input name="query" class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+                           th:value="${query}">
                     <button class="btn btn-outline-light" type="submit">Search</button>
                 </form>
             </div>
@@ -39,20 +46,63 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>1</td>
-            <td>Named</td>
-            <td>Person</td>
-            <td>1. 1. 1900</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Unknown</td>
-            <td>Person</td>
-            <td>1. 1. 1999</td>
+        <!--        cyklické generování řádků, data posílá controller -->
+        <!-- proměnná týkající  se procházení cyklu, se často jmenuje iterStat nebo jméno proměnné + Stat -->
+        <tr th:each="person, personStat : ${people}">
+            <td th:text="${personStat.count}">1</td>
+            <td th:text="${person.givenName}">Named</td>
+            <td th:text="${person.lastName}">Person</td>
+            <td th:text="${person.birthDate}">1. 1. 1900</td>
         </tr>
         </tbody>
     </table>
+
+    <!-- data z formuláře níže se posílají metodou get, tj. přes parametry uvedené v adrese -->
+    <!-- tyto hodnoty si načte controller. Když je action prázdná, tak se znovu načte ta samá stránka,
+    na které je formulář -->
+    <!-- <form action=""></form>-->
+
+    <!-- -----------------------------FORMULÁŘ PRO VKLÁDÁNÍ ------------------------------------------------------------->
+    <!-- Atributy name u polí formuláře musí být pojmenované stejně jako properties v entitě Person. Spring totiž hledá
+     jména proměnných právě v properties této entity. Stejná jsou i jména parametrů v adresní řádce po odeslání formuláře. -->
+    <!--    Pokud mám atributy name a jména properties v entitě Person shodná, tak Spring sám zařídí mapování. -->
+    <h2 class="mt-5 mb-3">Append famous person</h2>
+    <!-- th:action="@{/}" je adresa, která se má po odeslání formuláře načíst. Formulář může být na jiné stránce. -->
+    <!--    <form class="row g-3" th:action="@{/}" method="get">-->
+    <!--        Změna metody u formuláře na post. Je potřeba změnit i anotaci v controlleru z @GetMapping na @PostMapping-->
+    <form class="row g-3" th:action="@{/}" method="post">
+
+        <div class="col-md-4">
+            <!-- Když kliknu na stránce na label, tak se kurzor přepne do příslušného políčka.-->
+            <label for="given-name">Given name</label>
+            <input id="given-name" name="givenName" class="form-control" type="text"/>
+        </div>
+        <div class="col-md-5">
+            <label for="last-name">Last name</label>
+            <input id="last-name" name="lastName" class="form-control" type="text"/>
+        </div>
+        <div class="col-md-2">
+            <label for="birth-date">Birth date</label>
+            <!-- input type date umožňuje vkládat datum -->
+            <!--            Datum se z formuláře odešle v iso formátu rok-mesic-den (viz adresní řádek po odeslání formuláře),-->
+            <!--            i když v políčku pro vyplňování data je to ve formátu den.mesic.rok-->
+            <input id="birth-date" name="birthDate" class="form-control" type="date"/>
+        </div>
+        <div class="col-md-1 align-self-end">
+            <button type="submit" class="btn btn-primary"><i class="bi-person-plus-fill" role="img" aria-label="Append">
+            </i></button>
+        </div>
+    </form>
+
+    <!--    -----------------------------------------FORMULÁŘ PRO MAZÁNÍ------------------------------------------------ -->
+    <h2 class="mt-5 mb-3">Remove famous person</h2>
+    <form class="row g-3" th:action="@{/}" method="post">
+        <!--            id nepotřebuji uživateli zobrazovat, proto pole skryji -->
+        <input name="id" value="0" class="form-control" type="hidden">
+        <div class="col-md-1 align-self-end">
+            <button type="submit" class="btn btn-primary">Delete</button>
+        </div>
+    </form>
 </div>
 </body>
 </html>
